<resources>
    <string name="app_name">Qontract</string>
    <string name="add_contract">Add contract</string>
    <string name="hint_first_name">Your first name…</string>
    <string name="submit_btn">Submit</string>
    <string name="empty_not_saved">Contract not saved because it is empty.</string>
    <string name="calendar_icon_alt">Calendar icon</string>
    <string name="location_pin_icon_alt">Location pin icon</string>
    <string name="signed_icon_alt">Signed icon</string>
    <string name="add_new_contract_hint">Add new contract</string>
    <string name="go_to_settings_hint">Go to settings view</string>
    <string name="contracts">Contracts</string>
    <string name="first_name_input_label">First Name*</string>
    <string name="model_release_form">Model Release Form</string>
    <string name="contract_details">Contract details</string>
    <string name="location_input_hint">City, Country</string>
    <string name="location_input_label">Location**</string>
    <string name="date_input_label">Date**</string>
    <string name="date_input_hint">dd.mm.yyyy</string>
    <string name="firstname_input_label">Firstname**</string>
    <string name="firstname_input_hint">John</string>
    <string name="lastname_input_label">Lastname**</string>
    <string name="lastname_input_hint">Doe</string>
    <string name="model_details_title">Model details</string>
    <string name="address_input_label">Address*</string>
    <string name="address_input_hint">Street 1, 12345 City, Country</string>
    <string name="email_input_label">Email</string>
    <string name="email_input_hint">example@mail.com</string>
    <string name="phone_input_label">Phone</string>
    <string name="phone_input_hint">+12 345 678 90</string>
    <string name="read_contract_btn">Read Contract</string>
    <string name="read_checkbox_label">I have read the contract and agree with the terms and conditions.</string>
    <string name="model_signature_title">Model\'s signature*</string>
    <string name="signature_input_hint">Double tap to clear signature.</string>
    <string name="form_0_hint">*required fields</string>
    <string name="form_1_hint">**minimum required fields</string>
    <string name="search_hint">Search contracts</string>
    <string name="settings_title">Settings</string>
    <string name="personal_details_title">Personal Details</string>
    <string name="app_settings_title">App settings</string>
    <string name="model_mode_label">Enable model mode</string>
    <string name="select_contracts">Select contracts</string>
    <string name="add_contract_title">Add contract</string>
    <string name="add">Add</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstname_pref_label">Firstname</string>
    <string name="lastname_pref_label">Lastname</string>
    <string name="address_pref_label">Address</string>
    <string name="qr_btn_desc">See QR Code</string>
    <string name="qr_btn">QR-Code</string>
    <string name="delete">Delete</string>
    <string name="share">share</string>
    <string name="qr_image_desc">QR-Code for the selected contract.</string>
    <string name="back_to_contract">Back to contract</string>
</resources>