<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    android:overScrollMode="never"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_contract_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/l_dim">
        <!-- Header start -->
        <!-- Header start -->
        <TextView
            android:id="@+id/setting_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/l_dim"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/settings_title"
            android:textColor="@color/text"
            android:textSize="@dimen/normal_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-8dp"
            android:background="@color/white"
            android:contentDescription="@string/go_to_settings_hint"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toTopOf="@+id/model_details_title"
            app:layout_constraintEnd_toStartOf="@+id/setting_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black"
            tools:ignore="TouchTargetSizeCheck" />
        <!-- Header End -->
        <!-- Header End -->

        <!-- Model details start -->
        <TextView
            android:id="@+id/model_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/personal_details_title"
            android:textColor="@color/text"
            android:textSize="@dimen/normal_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_title" />

        <LinearLayout
            android:id="@+id/first_name_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xs_dim"
            android:background="@drawable/bg_white_border_gray_rounded_top"
            android:orientation="vertical"
            android:padding="@dimen/m_dim"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/model_details_title">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/neg_m_dim"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/firstname_input_label"
                android:textColor="@color/text"
                android:textSize="@dimen/extra_small_text" />

            <EditText
                android:id="@+id/first_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/neg_xs_dim"
                android:autofillHints="firstname"
                android:background="@color/transparent"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/firstname_input_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingTop="@dimen/m_dim"
                android:textColor="@color/blue_500"
                android:textColorHint="@color/hint_text"
                android:textSize="@dimen/normal_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lastname_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-1dp"
            android:background="@drawable/bg_white_border_gray"
            android:orientation="vertical"
            android:padding="@dimen/m_dim"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_name_group">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/neg_m_dim"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/lastname_input_label"
                android:textColor="@color/text"
                android:textSize="@dimen/extra_small_text" />

            <EditText
                android:id="@+id/lastname_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/neg_xs_dim"
                android:autofillHints="firstname"
                android:background="@color/transparent"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/lastname_input_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingTop="@dimen/m_dim"
                android:textColor="@color/blue_500"
                android:textColorHint="@color/hint_text"
                android:textSize="@dimen/normal_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/address_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-1dp"
            android:background="@drawable/bg_white_border_gray"
            android:orientation="vertical"
            android:padding="@dimen/m_dim"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastname_group">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/neg_m_dim"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/address_input_label"
                android:textColor="@color/text"
                android:textSize="@dimen/extra_small_text" />

            <EditText
                android:id="@+id/address_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/neg_xs_dim"
                android:autofillHints="firstname"
                android:background="@color/transparent"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/address_input_hint"
                android:inputType="textPostalAddress"
                android:minHeight="48dp"
                android:paddingTop="@dimen/m_dim"
                android:textColor="@color/blue_500"
                android:textColorHint="@color/hint_text"
                android:textSize="@dimen/normal_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-1dp"
            android:background="@drawable/bg_white_border_gray"
            android:orientation="vertical"
            android:padding="@dimen/m_dim"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_group">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/neg_m_dim"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/email_input_label"
                android:textColor="@color/text"
                android:textSize="@dimen/extra_small_text" />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/neg_xs_dim"
                android:autofillHints="firstname"
                android:background="@color/transparent"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/email_input_hint"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingTop="@dimen/m_dim"
                android:textColor="@color/blue_500"
                android:textColorHint="@color/hint_text"
                android:textSize="@dimen/normal_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/phone_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-1dp"
            android:background="@drawable/bg_white_border_gray_rounded_bottom"
            android:orientation="vertical"
            android:padding="@dimen/m_dim"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_group">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/neg_m_dim"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/phone_input_label"
                android:textColor="@color/text"
                android:textSize="@dimen/extra_small_text" />

            <EditText
                android:id="@+id/phone_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/neg_xs_dim"
                android:autofillHints="firstname"
                android:background="@color/transparent"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/phone_input_hint"
                android:inputType="phone"
                android:minHeight="48dp"
                android:paddingTop="@dimen/m_dim"
                android:textColor="@color/blue_500"
                android:textColorHint="@color/hint_text"
                android:textSize="@dimen/normal_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
        <!-- Model details end -->
        <!-- App settings begin -->
        <TextView
            android:id="@+id/app_settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/l_dim"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/app_settings_title"
            android:textColor="@color/text"
            android:textSize="@dimen/normal_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_group" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/model_mode_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xs_dim"
            android:layout_weight="1"
            android:background="@drawable/bg_white_border_gray_rounded"
            android:fontFamily="@font/poppins_medium"
            android:padding="@dimen/m_dim"
            android:text="@string/model_mode_label"
            android:textSize="@dimen/normal_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_settings_title" />
        <!-- App settings end-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>