<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="22dp"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:requiresFadingEdge="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        tools:listitem="@layout/recyclerview_item" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="3dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/bg_white_rounded"
        android:elevation="5dp"
        android:iconifiedByDefault="false"
        android:paddingStart="-5dp"
        android:queryBackground="@android:color/transparent"
        android:queryHint="Search"
        app:layout_constraintBottom_toTopOf="@+id/recyclerview"
        app:layout_constraintTop_toTopOf="parent"
        app:queryBackground="@android:color/transparent"
        tools:layout_editor_absoluteX="22dp" />

    <TextView
        android:id="@+id/contractsTitle"
        style="@style/TextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/contracts"
        android:textSize="@dimen/l_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/addContractIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:contentDescription="@string/add_new_contract_hint"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toTopOf="@+id/searchView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/contractsTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <ImageButton
        android:id="@+id/settingsIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:contentDescription="@string/go_to_settings_hint"
        android:src="@drawable/ic_baseline_settings_24"
        app:layout_constraintBottom_toTopOf="@+id/searchView"
        app:layout_constraintEnd_toStartOf="@+id/contractsTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>