<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/contractsFragment">

    <fragment
        android:id="@+id/settingsFragment"
        android:name="de.nicoismaili.qontract.ui.fragments.PreferencesFragment"
        android:label="@string/settings_title">
        <action
            android:id="@+id/action_settingsFragment_to_contractsFragment"
            app:destination="@id/contractsFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/contractsFragment"
        android:name="de.nicoismaili.qontract.ui.fragments.ContractsFragment"
        android:label="@string/contracts"
        tools:layout="@layout/fragment_contracts">
        <action
            android:id="@+id/action_contractsFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_contractsFragment_to_editContractFragment"
            app:destination="@id/editContractFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/editContractFragment"
        android:name="de.nicoismaili.qontract.ui.fragments.EditContractFragment"
        android:label="@string/add_contract_title"
        tools:layout="@layout/fragment_edit_contract">
        <action
            android:id="@+id/action_editContractFragment_to_contractsFragment"
            app:destination="@id/contractsFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <argument
            android:name="contractId"
            android:defaultValue="-1"
            app:argType="integer" />
        <action
            android:id="@+id/action_editContractFragment_to_readContractFragment"
            app:destination="@id/readContractFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/readContractFragment"
        android:name="de.nicoismaili.qontract.ui.fragments.ReadContractFragment"
        android:label="Contract">
        <action
            android:id="@+id/action_readContractFragment_to_editContractFragment"
            app:destination="@id/editContractFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
</navigation>